# langfuse-handler

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
data/: attestation-prompt.json  attestation_test.json  attestation_test_cases_50_v2.json  skill-matcher-prompt.json
sample_usage/: evaluator.py  prompt_generator.py  promptrunner_test.py
src/langfuse_handler/: __init__.py  eval_generator.py  langfuse_handler.py
tests/: test_langfuse_handler.py
